--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ share/python-wheels/
 MANIFEST
 config_for_rating/
 algo.py
+vacancy_rating/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
